# pws

./: .gitignore  README.md  build+run.sh  build.sh  database.sh  run.sh  todo.md
.github/workflows/: backend.yml
backend/: .env  Cargo.toml  config.rs~  diesel.toml  rocket.toml  todo.md
backend/migrations/2020-10-22-083351_create_user/: up.sql
backend/src/: #login.rs#  .#login.rs  auth.rs  config.rs  jwt_old.rs  lib.rs  lib.rs~  login.rs~  main.rs  models.rs  permission.rs  routes.rs  routes.rs~  testhelp.rs
backend/src/database/: #models.rs#  mod.rs  models.rs  schema.rs
backend/src/database/models/: badge.rs  class.rs  homework.rs  mod.rs  student.rs  teacher.rs
backend/src/faild_auth/login/: guard.rs  mod.rs  permission.rs~
backend/src/login/: mod.rs  mod.rs~  permission.rs
backend/src/routes/: badge.rs  class.rs  homework.rs  login.rs  mod.rs  student.rs  teacher.rs
backend/tests/: badge.rs  class.rs  homework.rs  id.rs  login.rs
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: Btn.vue  MenuBar.vue  klastabel.vue  leerlingmenu.vue  leraarmenu.vue  menu.vue
frontend/src/router/: index.js
frontend/src/views/: Aanmelden.vue  Klas.vue  Login.vue  Opties.vue  Rang.vue  aanmaken.vue  aanmelden.vue  addhuiswerk.vue  home.vue  huiswerk.vue  joinklas.vue  klas.vue  klassen.vue  login.vue  profiel.vue  start.vue  weekhuiswerk.vue
frontend/src/views/leerling/: aanmelden.vue  home.vue  joinklas.vue  klas.vue  klassen.vue  login.vue  profiel.vue  winkel.vue
frontend/src/views/leraar/: aanmaken.vue  aanmelden.vue  addhuiswerk.vue  home.vue  joinklas.vue  klas.vue  klassen.vue  login.vue  profiel.vue
pws/: package-lock.json
