[package]
name = "backend"
version = "0.1.0"
authors = ["capnhawkbill <capnhawkbill@airmail.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
diesel = "1.4.5"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.33"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_sqlite_pool"]
