[package]
name = "backend"
version = "0.1.0"
authors = ["capnhawkbill <capnhawkbill@airmail.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
diesel = "1.4.5"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.33"
strum = "0.19"
strum_macros = "0.19"
dotenv = "0.15.0"
structopt = "0.3.20"
jsonwebtoken = "7.2.0"
derive_builder = "0.9.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_sqlite_pool", "json"]
