[package]
name = "backend"
version = "0.1.0"
authors = ["capnhawkbill <capnhawkbill@airmail.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.33"
dotenv = "0.15.0"
derive_builder = "0.9.0"
base64 = "0.13.0"
mysql = "20.0.1"
#rusqlite = "0.24.1"
argh = "0.1.4"
csv = "1.1.4"
serde_json = "1.0.60"
comfy-table = "1.4.2"
rand = "0.8.0"
log = "0.4.11"
env_logger = "0.8.2"
chrono = { version = "0.4.19", features = ["serde"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["sqlite_pool", "json", "serve"]
